<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6200EA"
    tools:context=".Choose.ChooseActivity">

    <Button
        android:id="@+id/savedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="serif"
        android:text="@string/savedPasswords"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#2962FF"
        app:layout_constraintBottom_toTopOf="@+id/suggestButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savedImage" />

    <Button
        android:id="@+id/suggestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="serif"
        android:text="@string/suggestPasswords"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#2962FF"
        app:layout_constraintBottom_toTopOf="@+id/logOutChose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savedButton" />

    <Button
        android:id="@+id/logOutChose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/logout"
        android:textColor="@color/black"
        app:backgroundTint="#2962FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suggestButton" />

    <ImageView
        android:id="@+id/savedImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@+id/savedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save"
        tools:srcCompat="@android:drawable/ic_menu_save" />

    <ImageView
        android:id="@+id/chooseImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/suggestButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savedButton"
        app:srcCompat="@android:drawable/ic_menu_sort_alphabetically"
        tools:srcCompat="@android:drawable/ic_menu_sort_alphabetically" />

</androidx.constraintlayout.widget.ConstraintLayout>